# labs

gtest_example/: CMakeLists.txt  cmake.sh  main.cpp
gtest_example/linked_list/: CMakeLists.txt  list.cpp  list.h
gtest_example/tests/: CMakeLists.txt  list_test.cpp
libs/: CMakeLists.txt  cmake.sh  manual_build.sh
libs/dynamic_lib/: CMakeLists.txt
libs/dynamic_lib/include/: dyn.h
libs/dynamic_lib/src/: dyn.cpp
libs/runnable/: CMakeLists.txt
libs/runnable/include/: lib_user.h
libs/runnable/src/: lib_user.cpp  main.cpp
libs/static_lib/: CMakeLists.txt
libs/static_lib/include/: static.h
libs/static_lib/src/: static.cpp
